fix for mobile whitespace scrolling

--- a/static/page.css
+++ b/static/page.css
@@ -1,3 +1,8 @@
+html, body {
+	width: 100%;
+	overflow-x: hidden;
+}
+
 .staff-block {
 	border: 2px solid blue;
 	border-radius: 5px;
